RiverLea 1.4.2 Colour Contrast Darkmode issues (/riverlea/-/issues/123)

--- a/ext/riverlea/streams/minetta/css/_dark.css
+++ b/ext/riverlea/streams/minetta/css/_dark.css
@@ -12,14 +12,17 @@
   --crm-c-background2: var(--crm-c-gray-800);
   --crm-c-background3: var(--crm-c-gray-700);
   --crm-c-background4: var(--crm-c-gray-600);
+  --crm-c-info: var(--crm-c-blue-light);
+  --crm-c-info-text: var(--crm-alert-text-info);
+  --crm-c-warning: var(--crm-c-yellow-light);
+  --crm-c-warning-text: var(--crm-c-text-dark);
   --crm-c-success: var(--crm-c-green-light);
-  --crm-c-amber: #993b00;
-  --crm-c-red: #b3001b;
-  --crm-c-blue-light: #195e80;
+  --crm-c-success-text: var(--crm-alert-text-help);
+  --crm-c-danger: var(--crm-c-red-light);
+  --crm-c-alert: var(--crm-c-red-light);
+  --crm-c-alert-text: var(--crm-alert-text-danger);
+  /* --crm-c-blue-light: #195e80; */
   --crm-c-teal: #a3ebe6;
-  --crm-c-green-light: #366336;
-  --crm-c-green: #55aa57;
-  --crm-c-green-dark: #dff0d8;
   --crm-c-gray-900: #363636;
   --crm-c-gray-800: #464646;
   --crm-c-gray-700: #535252;
@@ -54,17 +57,10 @@
   --crm-table-odd-hover: var(--crm-c-gray-700);
   --crm-table-even-row: var(--crm-c-page-background);
   --crm-table-even-hover: var(--crm-c-gray-700);
-  --crm-alert-text-help: var(--crm-c-text-light);
-  --crm-alert-background-info: var(--crm-c-blue-dark);
-  --crm-alert-text-info: var(--crm-c-text-light);
   --crm-c-inactive: var(--crm-c-gray-400);
   --crm-input-color: var(--crm-c-text);
   --crm-input-description: var(--crm-c-gray-300);
   --crm-input-radio-color: #38c4b4;
-  --crm-alert-text-help: var(--crm-c-text);
-  --crm-btn-cancel-bg: #9b3d4b;
-  --crm-btn-alert-bg: var(--crm-btn-cancel-bg);
-  --crm-btn-alert-text: var(--crm-c-text);
   --crm-dialog-header-border-col: transparent;
   --crm-dialog-header-bg: var(--crm-c-background2);
   --crm-dialog-body-bg: var(--crm-c-background2);
@@ -73,4 +69,7 @@
   --crm-form-block-background: var(--crm-c-background2);
   --crm-c-code-background: var(--crm-c-background2);
   --crm-filter-item-background: var(--crm-c-background2);
+}
+.crm-container .text-primary {
+  color: var(--crm-c-text);
 }
